--- a/dailymood/components/calendar/calendar.wxml
+++ b/dailymood/components/calendar/calendar.wxml
@@ -4,15 +4,20 @@
   <view wx:for="{{dayIndexArray}}" class="calendar-item"></view>
   <!-- 日期 -->
   <view wx:for="{{daysArray}}" class="calendar-item">
-    <view 
-      class="{{item == date && thisMonth == month && thisYear == year?'calendar-date today':'calendar-date'}}"  
+    <view
+      class="calender-date-container"  
       bind:tap="toEdit" 
       data-moodinfo="{{monthMoodList[index]}}"
     >
-      {{item}}
+      <view
+        class="{{item == date && thisMonth == month && thisYear == year?'calendar-date today':'calendar-date'}}" 
+      >
+        {{item}}
+      </view>
+      <view class="calendar-mood">
+          <i class="iconfont icon-icon-test mood-{{monthMoodList[index].moodType || monthMoodList[index].moodType == 0?monthMoodList[index].moodType:''}}"></i>
+      </view>
     </view>
-    <view class="calendar-mood">
-      <i class="iconfont icon-icon-test mood-{{monthMoodList[index].moodType || monthMoodList[index].moodType == 0?monthMoodList[index].moodType:''}}"></i>
-    </view>
+
   </view>
 </view>
