--- a/dailymood/components/calendar/calendar.wxss
+++ b/dailymood/components/calendar/calendar.wxss
@@ -1,5 +1,5 @@
 /* components/calendar/calendar.wxss */
-@import "/iconfont/iconfont.wxss";
+@import "/assets/iconfont/iconfont.wxss";
 .calendar-container {
   display: flex;
   flex-wrap: wrap;
@@ -13,9 +13,16 @@
   align-items: center;
 }
 
+.calender-date-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .calendar-date {
   font-size: 26rpx;
-  width: 50%;
+  width: 100%;
   height: 40rpx;
   border-radius: 50%;
   color: rgb(255, 166, 0);
