--- a/dailymood/pages/report/report.wxml
+++ b/dailymood/pages/report/report.wxml
@@ -1,7 +1,7 @@
 <!--pages/report/report.wxml-->
 <view class="report-container">
   <view class="title">
-    <image class="title-img" src="/images/report-icon.png"></image>
+    <image class="title-img" src="/assets/images/report-icon.png"></image>
     <text class="title-text">{{username}}的心情报告</text>
   </view>
 
@@ -10,7 +10,6 @@
     <!-- 点击年份出现选择器 -->
     <text>----------</text>
     <picker 
-      class="this-year"
       mode="date" 
       value="{{thisYear}}" 
       fields="year" 
@@ -18,18 +17,20 @@
       end="{{endYear}}"
       bindchange="yearChange"
     >
-      <text>{{thisYear}}</text>
+      <view class="this-year">
+        <view>{{thisYear}}</view>
+        <view class="arrow-img-container">
+          <image src="/assets/images/arrow.png" class="arrow-img arrow-img-up"></image>
+          <image src="/assets/images/arrow.png" class="arrow-img arrow-img-down"></image>
+        </view>
+      </view>
     </picker>
-    <view class="arrow-img-container">
-      <image src="/images/arrow.png" class="arrow-img arrow-img-up"></image>
-      <image src="/images/arrow.png" class="arrow-img arrow-img-down"></image>
-    </view>
     <text>----------</text>
   </view>
 
   <!-- 加载中图标 -->
   <view class="loading" wx-if="{{isLoading}}">
-    <image src="/images/cloud.png" class="loading-img"></image>
+    <image src="/assets/images/cloud.png" class="loading-img"></image>
     <text class="loading-text">加载中......</text>
   </view>
 
@@ -37,43 +38,43 @@
   <!-- 概括结果 -->
   <view class="general-res" wx-if="{{!noRecord}}">
     <view class="general-res-item">
-      <image src="/images/flower.png" class="general-res-img"></image>
+      <image src="/assets/images/flower.png" class="general-res-img"></image>
       <view class="general-res-info">全年得分
         <text class="general-res-infoNum">{{generalRes.totalScore}}</text>
       分~</view>
     </view>
     <view class="general-res-item">
-      <image src="/images/fruit.png" class="general-res-img"></image>
+      <image src="/assets/images/fruit.png" class="general-res-img"></image>
       <view class="general-res-info">全年共记录心情
         <text class="general-res-infoNum">{{generalRes.recordNum}}</text>
       条</view>
     </view>
     <view class="general-res-item">
-      <image src="/images/flower.png" class="general-res-img"></image>
+      <image src="/assets/images/flower.png" class="general-res-img"></image>
       <view class="general-res-info">全年共
         <text class="general-res-infoNum">{{generalRes.moodType_1}}</text>
       天心情非常棒！</view>
     </view>
     <view class="general-res-item">
-      <image src="/images/fruit.png" class="general-res-img"></image>
+      <image src="/assets/images/fruit.png" class="general-res-img"></image>
       <view class="general-res-info">全年共
         <text class="general-res-infoNum">{{generalRes.moodType_2}}</text>
       天心情不错哦！</view>
     </view>
     <view class="general-res-item">
-      <image src="/images/flower.png" class="general-res-img"></image>
+      <image src="/assets/images/flower.png" class="general-res-img"></image>
       <view class="general-res-info">全年共
         <text class="general-res-infoNum">{{generalRes.moodType_3}}</text>
       天心情一般般</view>
     </view>
     <view class="general-res-item">
-      <image src="/images/fruit.png" class="general-res-img"></image>
+      <image src="/assets/images/fruit.png" class="general-res-img"></image>
       <view class="general-res-info">全年共
         <text class="general-res-infoNum">{{generalRes.moodType_4}}</text>
       天心情较差</view>
     </view>
     <view class="general-res-item">
-      <image src="/images/flower.png" class="general-res-img"></image>
+      <image src="/assets/images/flower.png" class="general-res-img"></image>
       <view class="general-res-info">全年共
         <text class="general-res-infoNum">{{generalRes.moodType_5}}</text>
       天心情低迷</view>
@@ -106,16 +107,16 @@
   <view class="show-msg-container" wx-if="{{everyday.length}}">
     <view class="show-msg" bindtap="toShowMsg">
       <text class="show-msg-text">去看看全年的心情日记</text>
-      <image class="show-msg-img" src="/images/arrow.png"></image>
+      <image class="show-msg-img" src="/assets/images/arrow.png"></image>
     </view>
   </view>
 
   <!-- 底部 -->
   <view class="bottom-line">
     <text>----------</text>
-    <image class="bottom-img" src="/images/flower.png"></image>
+    <image class="bottom-img" src="/assets/images/flower.png"></image>
     <text>马上嗨起来</text>
-    <image class="bottom-img" src="/images/flower.png"></image>
+    <image class="bottom-img" src="/assets/images/flower.png"></image>
     <text>----------</text>
   </view>
 </view>
