--- a/dailymood/pages/report/report.wxss
+++ b/dailymood/pages/report/report.wxss
@@ -34,10 +34,16 @@ page {
   justify-content: center;
   align-items: center;
 }
+.this-year {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200rpx;
+}
 .arrow-img-container {
   height: 50rpx;
   width: 20rpx;
-  padding: 0 10rpx;
+  padding-left: 20rpx;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -119,7 +125,9 @@ page {
 .detailed-res-dateList {
   width: 40rpx;
   height: 40rpx;
+  line-height: 40rpx;
   background-color: rgb(255, 255, 255);
+  border-radius: 5rpx;
   text-align: center;
   margin: 10rpx 5rpx;
 }
@@ -155,6 +163,8 @@ page {
 }
 .mood-type {
   display: flex;
+  width: 150rpx;
+  justify-content: space-between;
   margin: 20rpx 10rpx;
 }
 .mood-type-color {
